# AI-demo

./: .gitignore  Commit.md  Python vs JavaScript 类对比表格.md  mark-大模型内容示例.md  mark.md  php调试.md  python发型版本.md  rename_project.py  todo.md  update_project_name.py  后台启动进程.md  集群.md
AI-Demo/: 0.模型分类及对比.md  1.大模型的原理和API使用.md  2.prompt工程.md  3.Embeddings 与 向量数据库.md  4.Rag.md  pyproject.toml  test-extrct-excel-info.py  test-network-search.py  test-ollama-fastapi.py  test-prompt-local-model.py  test-weather.py
AI-Demo/bed_usage/: .gitignore  README.md  app.py  data_service.py  main.py  precompute_data.py  pyproject.toml
AI-Demo/bed_usage/caches/: cache_manager.py  data_cache.pkl  metadata.json
AI-Demo/bed_usage/configs/: logger.py
AI-Demo/embeddings/: embedding-calc.py  embedding-es.py  embedding-faiss-metadata.py
AI-Demo/embeddings/chatPDF-Faiss/: chatpdf-faiss.py  readme.md
AI-Demo/embeddings/chatPDF-Faiss/vector_db/: index.pkl
AI-Demo/embeddings/hotel_recommendation/: constants.py  hotel_rec.py
AI-Demo/test-rag/: 1.fixed-length-chunks.py  2.semantic-chunks.py  3.meaning-chunks-llm.py  4.chunk-by-segment.py  4.层次切片.py  5.sliding-window-chunk.py  6.qwen-vl-image.py
Elasticsearch/: 入门.md  实用指南.md
Flask/: demo.md  基础.md
demo/: auto-start.py  catch-log-yield.py  catch-log.py
test/: .flaskenv  .gitignore  FIX-修复虚拟环境.md  QUICKSTART.md  RENAME_TO_TEST.md  SUMMARY.md  explore_api.py  run.py  test.py  test3.py  test_blueprints.py  test_context.sh  启动命令.md  环境变量配置说明.md  重新创建虚拟环境.sh
基础语法/: 1. python的类型.md  10. 映射.md  11. 二进制.md  12. 类.md  13. 迭代器 异步任务.md  bak.md  (+22 more)
(+34 files in other folders)
